--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+//        implementation 'com.android.support:gridlayout-v7:28.0.0'
+//        implementation 'com.android.support:appcompat-v7:28.0.0'
     }
 }
 
